--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mozaik-ext-switcher",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Mozaïk extension for switching between widgets within same dashboard",
   "author": "Juha Mustonen",
   "license": "MIT",
@@ -21,6 +21,7 @@
     "babelify": "7.2.0",
     "bluebird": "3.3.5",
     "chalk": "^1.1.3",
+    "classnames": "^2.2.5",
     "convict": "^0.6.1",
     "json5": "^0.5.0",
     "lodash": "^4.10.0",
