--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "mozaik-ext-switch",
-  "version": "0.4.0",
+  "version": "0.5.0-dev.1",
   "description": "Mozaïk extension for switching between widgets within same dashboard",
   "author": "Juha Mustonen",
   "license": "MIT",
+  "engineStrict": true,
   "engines": {
-    "node": "4.0.x"
+    "node": ">=6.0.0",
+    "npm": ">=3.0.0"
   },
   "repository": {
     "type": "git",
@@ -15,52 +17,68 @@
     "url": "https://github.com/juhamust/mozaik-ext-switch/issues"
   },
   "dependencies": {
-    "babel-core": "6.7.6",
-    "babel-preset-es2015": "6.6.0",
-    "babel-preset-react": "6.5.0",
-    "babelify": "7.2.0",
-    "bluebird": "3.3.5",
-    "chalk": "^1.1.3",
-    "classnames": "^2.2.5",
-    "convict": "^0.6.1",
-    "json5": "^0.5.0",
-    "lodash": "^4.10.0",
-    "moment": "^2.9.0",
-    "reflux": "0.4.1"
+    "chalk": "1.1.3",
+    "convict": "^2.0.0",
+    "moment": "^2.17.1",
+    "moment-duration-format": "1.3.0",
+    "prop-types": "^15.5.10",
+    "react-icons": "^2.2.5",
+    "request": "^2.79.0",
+    "request-promise-native": "^1.0.3"
   },
-  "main": "./components.js",
+  "main": "./lib/components/index.js",
+  "module": "es/components/index.js",
+  "jsnext:main": "es/components/index.js",
   "devDependencies": {
-    "ava": "^0.16.0",
-    "babel-eslint": "6.0.2",
-    "babel-register": "6.7.2",
-    "eslint": "^3.5.0",
-    "eslint-plugin-react": "^6.3.0",
-    "proxyquire": "^1.7.10",
-    "react": "^0.13.3",
-    "react-mixin": "3.0.4"
+    "@mozaik/babel-preset": "^1.0.0-alpha.6",
+    "@mozaik/ui": "^2.0.0-alpha.11",
+    "ava": "^0.17.0",
+    "babel-cli": "^6.24.1",
+    "babel-eslint": "^7.2.3",
+    "babel-jest": "^20.0.3",
+    "coveralls": "^2.11.15",
+    "cross-env": "^5.0.1",
+    "enzyme": "^2.9.1",
+    "eslint": "^4.2.0",
+    "eslint-plugin-react": "^7.1.0",
+    "husky": "^0.14.3",
+    "jest": "^20.0.4",
+    "lint-staged": "^4.0.2",
+    "nivo": "^1.0.0-alpha.8",
+    "nock": "^9.0.2",
+    "nyc": "^10.0.0",
+    "prettier": "^1.5.3",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-test-renderer": "^15.6.1",
+    "styled-components": "^2.1.1"
   },
   "peerDependencies": {
-    "mozaik": ">=1.4.2",
-    "react": "^0.13.3"
-  },
-  "browserify": {
-    "transform": [
-      "babelify"
-    ]
+    "@mozaik/ui": "^2.0.0-alpha.11",
+    "nivo": "^1.0.0-alpha.8",
+    "react": "^15.6.1"
   },
   "scripts": {
-    "test": "ava",
-    "lint": "eslint --ext .js --ext .jsx ./src/** ./test/**"
+    "lint": "eslint ./src/** ./test/**",
+    "lint:fix": "eslint --fix ./src/** ./test/**",
+    "test": "jest --verbose",
+    "test:cover": "jest --verbose --coverage",
+    "coverage": "cat ./coverage/lcov.info | coveralls",
+    "build:commonjs": "cross-env BABEL_ENV=commonjs babel src --out-dir lib",
+    "build:es": "cross-env BABEL_ENV=es babel src --out-dir es",
+    "build": "npm run build:commonjs && npm run build:es",
+    "fmt": "prettier --print-width=100 --tab-width=4 --bracket-spacing --no-semi --trailing-comma es5 --single-quote --color --write \"{src,test}/**/*.js\" 'client.js'",
+    "fmt:check": "prettier --print-width=100 --tab-width=4 --bracket-spacing --no-semi --trailing-comma es5 --single-quote --list-different \"{src,test}/**/*.js\" 'client.js'",
+    "prepublishOnly": "npm run lint && npm test && npm run build",
+    "version": "echo ${npm_package_version}",
+    "precommit": "lint-staged"
   },
-  "ava": {
-    "files": [
-      "tests/*.test.js"
-    ],
-    "tap": false,
-    "failFast": true,
-    "require": [
-      "babel-register"
-    ],
-    "babel": "inherit"
+  "lint-staged": {
+    "*.js": [
+      "lint:fix",
+      "fmt",
+      "git add",
+      "jest --bail --findRelatedTests"
+    ]
   }
 }
