--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-test-renderer": "^15.6.1",
-    "styled-components": "^2.2.4"
+    "styled-components": "^2.2.4",
+    "watch": "^1.0.2"
   },
   "peerDependencies": {
     "@mozaik/ui": "^2.0.0-alpha.11",
@@ -71,7 +72,8 @@
     "fmt:check": "prettier --print-width=100 --tab-width=4 --bracket-spacing --no-semi --trailing-comma es5 --single-quote --list-different \"{src,test}/**/*.js\" 'client.js'",
     "prepublishOnly": "npm run lint && npm test && npm run build",
     "version": "echo ${npm_package_version}",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "watch": "watch 'npm run build' src"
   },
   "lint-staged": {
     "*.js": [
